--- a/public/index.html
+++ b/public/index.html
@@ -3,15 +3,11 @@
 	<head>
 		<title> Minesweeper </title>
 		<meta charset="utf-8">
+		<link rel="stylesheet" type="text/css" href="css/common.css">
 		<link rel="stylesheet" type="text/css" href="css/minesweeper.css">
 		<script src="https://fb.me/react-0.14.1.js"></script>
 		<script src="https://fb.me/react-dom-0.14.1.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/flux/2.1.1/Flux.js"></script>
-		<style type="text/css">
-
-			body { margin: 0; }
-
-		</style>
 	</head>
 	
 	<body>
