--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,9 @@
 		<meta charset="utf-8">
 		<link rel="stylesheet" type="text/css" href="css/common.css">
 		<link rel="stylesheet" type="text/css" href="css/minesweeper.css">
-		<script src="https://fb.me/react-0.14.1.js"></script>
-		<script src="https://fb.me/react-dom-0.14.1.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/flux/2.1.1/Flux.js"></script>
+		<script src="libs/react.min.js"></script>
+		<script src="libs/react-dom.min.js"></script>
+		<script src="libs/flux.min.js"></script>
 	</head>
 	
 	<body>
